[project]
name = "2park"
version = "0.1.0"
description = "Home Assistant integration for 2Park"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "homeassistant",
    "pytest",
    "pytest-homeassistant-custom-component",
    "pytest-asyncio",
    "ruff",
    "mypy",
]
